// File: bakery_pos.proto
syntax = "proto3";

package proto;
option go_package = "./proto";
// ==========================================
// Data Message
// ==========================================
message Empty {}

message CategoryRequest {
  string id = 1;
  string name = 2;
}

message CategoryResponse {
  string id = 1;
  string name = 2;
}

message GetCategoryByIdRequest {
  string id = 1;
}

message CategoryList {
  repeated CategoryResponse categories = 1;
}


message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock_quantity = 5;
  string category_id = 6;
  string image_url = 7;
}


message User {
  string id = 1;
  string name = 2;
  string role = 3;
  string email = 4;
}

message Sale {
  string id = 1;
  repeated Product items = 2;
  float total_price = 3;
  string date = 4;
}

message Report {
  string title = 1;
  string content = 2;
  string generated_at = 3;
}

// ==========================================
// Request/Response
// ==========================================
message ProductRequest {
  string id = 1;
}
message ProductListResponse {
  repeated Product products = 1;
}
message ProductResponse {
  Product product = 1;
}
message CreateProductRequest {
  Product product = 1;
}
message UpdateProductRequest {
  Product product = 1;
}
message DeleteProductRequest {
  string id = 1;
}

message SaleRequest {
  repeated Product items = 1;
}
message SaleResponse {
  Sale sale = 1;
}

message ReportRequest {
  string from_date = 1;
  string to_date = 2;
}
message ReportResponse {
  repeated Report reports = 1;
}

message ListSale {
  repeated Sale saleList = 1;
}

message UserList {
  repeated User userList = 1;
}

message DeleteProductResponse {
  string messageSuccesfull = 1;
}
// ==========================================
// Service
// ==========================================
service BakeryPOSService  {

  // ================================
  // üîê ADMIN / MANAJER / GUDANG
  // ================================

  // Produk
  rpc CreateCategory (CategoryRequest) returns (CategoryResponse);
  rpc ListCategories (Empty) returns (CategoryList);
  rpc GetCategoryById (GetCategoryByIdRequest) returns (CategoryResponse);
  rpc CreateProduct(CreateProductRequest) returns (ProductResponse);       // Admin, Manajer
  rpc UpdateProduct(UpdateProductRequest) returns (ProductResponse);       // Admin, Manajer
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);                 // Admin
  rpc GetProduct(ProductRequest) returns (ProductResponse);                // Semua Role
  rpc ListProducts(Empty) returns (ProductListResponse);                   // Semua Role

  // ================================
  // üîê GUDANG
  // ================================

  // Manajemen Stok (sama dengan produk, tapi bisa ditambah fitur stok manual)
  rpc AdjustStock(ProductRequest) returns (ProductResponse);               // Gudang
  rpc ReceiveStock(ProductRequest) returns (ProductResponse);              // Gudang
  rpc StockOpname(Empty) returns (ProductListResponse);                    // Gudang

  // ================================
  // üîê KASIR
  // ================================

  // Transaksi Penjualan
  rpc CreateSale(SaleRequest) returns (SaleResponse);                      // Kasir
  rpc PrintReceipt(SaleRequest) returns (SaleResponse);                    // Kasir
  rpc GetSalesHistory(Empty) returns (ListSale);                      // Kasir, Admin

  // ================================
  // üîê ADMIN / MANAJER
  // ================================

  // Laporan
  rpc GenerateReport(ReportRequest) returns (ReportResponse);             // Admin, Manajer

  // ================================
  // üîê ADMIN
  // ================================

  // Manajemen User
  rpc ListUsers(Empty) returns (UserList);                           // Admin
  rpc CreateUser(User) returns (User);                                    // Admin
  rpc UpdateUser(User) returns (User);                                    // Admin
  rpc DeleteUser(ProductRequest) returns (Empty);                         // Admin

  // Pengaturan Toko dan Promo bisa ditambahkan juga nanti.
}